syntax = "proto3";

package binaryCoder;
option go_package = "github.com/i5heu/ouroboros-db/internal/binaryCoder";

message EventIdentifierProto {
  bytes event_hash = 1;
  int32 event_type = 2;
  bytes fast_meta = 3;
}

message EventProto {
  EventIdentifierProto event_identifier = 1;
  int64 level = 2;
  repeated bytes content_hashes = 3;
  repeated bytes metadata_hashes = 4;
  bytes parent_event = 5;
  bytes root_event = 6;
  bool temporary = 7;
  bool full_text_search = 8;
}
