syntax = "proto3";

package protoFastMeta;
option go_package = "github.com/i5heu/ouroboros-db/internal/protoFastMeta";


message FastMetaParameterProto {
    bytes parameter = 1;
}

message FastMetaProto {
    repeated FastMetaParameterProto parameters = 1;
}